# Action-recognition-by-saliency-based-dense-sampling

HMDB51/HMDB51_NCPAPER_IDT/: CmEvaluation.cpp  DenseTrackStab.cpp
HMDB51/HMDB51_NCPAPER_IDT_NOHD/: ActionAnalysis.h  CMakeLists.txt  CmInclude.h  DenseTrackStab.cpp  DrawOpticalFlow.h
HMDB51/HMDB51_NCPAPER_MBI/: ActionAnalysis.cpp  CmGMM.h  DenseTrackStab.cpp  Descriptors.h  FisherVector.cpp
HMDB51/HMDB51_NCPAPER_ORIGINAL/: ActionAnalysis.cpp  DenseTrackStab.cpp  DenseTrackStab.h  Descriptors.h  FisherVector.cpp  getopt.h
HMDB51/HMDB51_NCPAPER_RC/: DenseTrackStab.cpp  DrawTracks.h  OpticalFlow.h
HMDB51/HMDB51_NCPAPER_rawRCB/: DenseTrackStab.cpp  FisherVector.h
HMDB51/HMDB51_NCPAPER_wof3m0.5RCB1e-4/: DenseTrackStab.cpp  使用说明.txt
HY2/HY2_NCPAPER_IDT/: CmDefinition.h  DenseTrackStab.cpp
HY2/HY2_NCPAPER_IDT_NOHD/: CmAPCluster.cpp  DenseTrackStab.cpp
HY2/HY2_NCPAPER_IDT_ORIGINAL/: CMakeLists.txt  DenseTrackStab.cpp  Initialize.h
HY2/HY2_NCPAPER_MBI/: CmEvaluation.h  CmSaliencyGC.cpp  CmTimer.h  DenseTrackStab.cpp  bsMP
HY2/HY2_NCPAPER_RC/: BrowseDir.h  CmAPCluster.h  CmGMM.cpp  DenseTrackStab.cpp
HY2/HY2_NCPAPER_rawRCB/: DenseTrackStab.cpp
HY2/HY2_NCPAPER_wof3m0.5RCB1e-4/: DenseTrackStab.cpp  Initialize.h  TrainAndTest.cpp
UCF50/UCF50_NCPAPER_IDT/: CmColorQua.h  DenseTrackStab.cpp  DenseTrackStab.h
UCF50/UCF50_NCPAPER_IDT_NOHD/: DenseTrackStab.cpp  Descriptors.h
UCF50/UCF50_NCPAPER_IDT_ORIGINAL/: DenseTrackStab.cpp
UCF50/UCF50_NCPAPER_MBI/: CmDefinition.cpp  DenseTrackStab.cpp  DrawOpticalFlow.h
UCF50/UCF50_NCPAPER_RC/: CmFile.cpp  CmFile.h  (+1 more)
(+5 files in other folders)
